--- a/src/app/pages/details-new/details.html
+++ b/src/app/pages/details-new/details.html
@@ -6,8 +6,11 @@
             </div>
         </div>
         <div class="content">
-            <div class="tab-controller" skip="true"></div>
-            <div class="tab-content" skip="true"></div>
+            <div class="phone-view" skip="true"></div>
+            <div class="bigger-view">
+                <div class="tab-controller" skip="true"></div>
+                <div class="tab-content" skip="true"></div>
+            </div>
         </div>
     </div>
 </template>
