--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -50,40 +50,48 @@
                 <a href="{model.webviewLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}" data-submenu="{model.submenu}">
                     <span class="fa fa-laptop"></span>
-                    View online
+                    <span class="text">View online</span>
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fas fa-cloud-download-alt"></span>
-                    <if condition="model.slug.substr(-6) === 'polska'">
-                        {' Pobierz książkę'}
-                    <else>
-                        {' Download a PDF'}
-                        <if condition="model.comingSoon">{' sample'}</if>
-                    </if>
+                    <span class="text">
+                        <if condition="model.slug.substr(-6) === 'polska'">
+                            {' Pobierz książkę'}
+                        <else>
+                            {' Download a PDF'}
+                            <if condition="model.comingSoon">{' sample'}</if>
+                        </if>
+                    </span>
                 </a>
             </div>
             <div if="model.printLink" class="option">
                 <a href="{model.printLink}" class="show-print-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-book"></span>
-                    Order a print copy
+                    <span class="text">
+                        Order a print copy
+                    </span>
                 </a>
             </div>
             <div if="model.bookshareLink" class="option">
                 <a href="{model.bookshareLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-volume-up"></span>
-                    Bookshare
+                    <span class="text">
+                        Bookshare
+                    </span>
                 </a>
             </div>
             <if condition="model.ibookLink">
                 <div if="model.ibookLink2" class="option">
                     <span class="option-header">
                         <span class="fab fa-apple"></span>
-                        Download on iBooks
+                        <span class="text">
+                            Download on iBooks
+                        </span>
                     </span>
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
@@ -98,7 +106,9 @@
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
                         <span class="fab fa-apple"></span>
-                        Download on iBooks
+                        <span class="text">
+                            Download on iBooks
+                        </span>
                     </a>
                 </div>
             </if>
@@ -106,7 +116,9 @@
                 <a href="{model.kindleLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fab fa-amazon"></span>
-                    Download for Kindle
+                    <span class="text">
+                        Download for Kindle
+                    </span>
                 </a>
             </div>
         </div>
