--- a/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
@@ -3,23 +3,33 @@
         Access free resources integrated with your book. Sign up for an account
         to access locked content.
     </div>
-    <div class="community-resources">
-        <div class="resource-box">
+    <div class="resources">
+        <div class="resource-box double">
             <h3>OpenStax Community Resources</h3>
             <div class="blurb">
                 Placeholder text about access, develop, share resources created by the
-                OpenStax Community that align with OpenStax {model.bookTitle}.
-            </div>
-            <div class="bottom-right">
-                <p>Visit oercommons.org to learn more about what they offer</p>
+                OpenStax Community that align with OpenStax {model.bookTitle}.<br>
                 <a href="http://oercommons.org">
+                    Visit the hub
                     <i class="fa fa-external-link-alt"></i>
                 </a>
             </div>
+            <div class="bottom">
+                <div class="left"></div>
+                <div class="right">
+                    Download Chapter 5 enhanced lecture slides???
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="resources">
         <resource-box each="resource in model.resources" skip="true"></resource-box>
+    </div>
+    <div class="webinars">
+        <span class="fa fa-desktop"></span>
+        <h3>Find a webinar</h3>
+        <div>
+            Learn more by attending one of our free webinars featuring
+            OpenStax authors, staff, and partners.
+        </div>
     </div>
     <if condition="model.allies.length">
         <div class="ally-blurb">
@@ -34,7 +44,7 @@
                  >
              </div>
         </div>
-        <div class="resources">
+        <div class="ally resources">
             <div each="ally in model.allies" class="ally-box resource-box">
                 <div class="top">
                     <img src="{ally.ally_color_logo}">
