--- a/src/app/pages/details-new/resource-box/resource-box.scss
+++ b/src/app/pages/details-new/resource-box/resource-box.scss
@@ -1,6 +1,7 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .resource-box {
+    background-color: ui-color(white);
     border-radius: 0.4rem;
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.14);
     display: flex;
@@ -8,6 +9,10 @@
     height: 100%;
     justify-content: space-between;
     padding: $normal-margin 1.8rem;
+
+    &.double {
+        grid-column: span 2;
+    }
 
     .top > * {
         margin: 0 0 5rem;
