--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -1,21 +1,7 @@
 <template args="model">
+    <div class="modal-region" hidden="{model.modalHiddenAttribute}" skip="true"></div>
     <div class="get-this-title">
         <div class="submenu {model.submenu}">
-            <div class="pdf-submenu">
-                <h3>Choose PDF</h3>
-                <a class="btn" href="{model.hiRes}"
-                    tabindex="{model.submenu === 'pdf' ? 0 : -1}">High Resolution</a>
-                <p>Better images, but a large file and a longer download time</p>
-                <if condition="model.loRes">
-                    <a class="btn" href="{model.loRes}"
-                        tabindex="{model.submenu === 'pdf' ? 0 : -1}">Low Resolution</a>
-                    <p>Same content and shorter download, but some lower resolution images</p>
-                <else>
-                    <p>Low resolution not available</p>
-                </if>
-                <div class="remover" aria-role="button"><i class="fa fa-times" aria-hidden="true"
-                    tabindex="{model.submenu === 'pdf' ? 0 : -1}"></i></div>
-            </div>
             <div class="print-submenu">
                 <h3>Place an Order</h3>
                 <p if="model.bookstore.link">
@@ -54,7 +40,7 @@
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
-                <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
+                <a href="{model.pdfLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fas fa-cloud-download-alt"></span>
                     <span class="text">
