--- a/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
@@ -1,58 +1,71 @@
 <template args="model">
     <div>
-        Access free resources integrated with your book. Sign up for an account
-        to access locked content.
-    </div>
-    <div class="resources">
-        <div class="resource-box double">
-            <h3>OpenStax Community Resources</h3>
-            <div class="blurb">
-                Placeholder text about access, develop, share resources created by the
-                OpenStax Community that align with OpenStax {model.bookTitle}.<br>
-                <a href="http://oercommons.org">
-                    Visit the hub
-                    <i class="fa fa-external-link-alt"></i>
-                </a>
-            </div>
-            <div class="bottom">
-                <div class="left"></div>
-                <div class="right">
-                    Download Chapter 5 enhanced lecture slides???
-                </div>
-            </div>
+        <!-- TODO: Get this stuff from the CMS -->
+        <h2>Free stuff. <span class="unbold">No catch.</span></h2>
+        <div class="free-stuff-blurb">
+            Access free resources integrated with your book. Sign up for an account
+            to access locked content.
         </div>
-        <resource-box each="resource in model.resources" skip="true"></resource-box>
-    </div>
-    <div class="webinars">
-        <span class="fa fa-desktop"></span>
-        <h3>Find a webinar</h3>
-        <div>
-            Learn more by attending one of our free webinars featuring
-            OpenStax authors, staff, and partners.
-        </div>
-    </div>
-    <if condition="model.allies.length">
-        <div class="ally-blurb">
-            <div>
-            OpenStax Partners provide additional, low-cost resources for your
-            book. See what's offered for this title below and learn more about
-            our <a href="/partners">partners here</a>.</div>
-            <div class="ally-logo">
-                <img
-                 src="http://staxlogos.openstax.org/OSX-ALLY-Green-RGB-150dpi.png"
-                 alt=""
-                 >
-             </div>
-        </div>
-        <div class="ally resources">
-            <div each="ally in model.allies" class="ally-box resource-box">
-                <div class="top">
-                    <img src="{ally.ally_color_logo}">
+        <div class="resources">
+            <div class="resource-box double">
+                <h3>OpenStax Community Resources</h3>
+                <div class="blurb">
+                    Placeholder text about access, develop, share resources created by the
+                    OpenStax Community that align with OpenStax {model.bookTitle}.<br>
+                    <a href="http://oercommons.org">
+                        Visit the hub
+                        <i class="fa fa-external-link-alt"></i>
+                    </a>
                 </div>
                 <div class="bottom">
-                    <a href="{ally.book_link_url}">
-                        {ally.book_link_text}<i class="fa fa-external-link-alt"></i>
-                    </a>
+                    <div class="left"></div>
+                    <div class="right">
+                        Download Chapter 5 enhanced lecture slides???
+                    </div>
+                </div>
+            </div>
+            <resource-box each="resource in model.resources" skip="true"></resource-box>
+        </div>
+    </div>
+    <div class="webinars">
+        <div class="icon-cell"><span class="fa fa-desktop"></span></div>
+        <div>
+            <!-- TODO pull text from CMS -->
+            <h2>Find a webinar</h2>
+            <div class="blurb">
+                Learn more by attending one of our free webinars featuring
+                OpenStax authors, staff, and partners.
+            </div>
+        </div>
+    </div>
+    <hr>
+    <if condition="model.allies.length">
+        <div>
+            <div class="ally-blurb">
+                <!-- TODO Get this from the CMS -->
+                <h2>Want more?</h2>
+                <div>
+                    OpenStax Partners provide additional, low-cost resources for your
+                    book. See what's offered for this title below and learn more about
+                    our partners here.
+                </div>
+                <div class="ally-logo">
+                    <img
+                    src="http://staxlogos.openstax.org/OSX-ALLY-Green-RGB-150dpi.png"
+                    alt=""
+                    >
+                </div>
+            </div>
+            <div class="ally resources">
+                <div each="ally in model.allies" class="ally-box resource-box">
+                    <div class="top">
+                        <img src="{ally.ally_color_logo}">
+                    </div>
+                    <div class="bottom">
+                        <a href="{ally.book_link_url}">
+                            {ally.book_link_text}<i class="fa fa-external-link-alt"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
