--- a/src/app/pages/details-new/student-resource-tab/student-resource-tab.html
+++ b/src/app/pages/details-new/student-resource-tab/student-resource-tab.html
@@ -1,10 +1,13 @@
 <template args="model">
     <div>
-        Take a look at our student resources that are integrated with your book
-        to help you ace your course. Sign up for an account to access locked
-        content.
-    </div>
-    <div class="resources">
-        <resource-box each="resource in model.resources" skip="true"></resource-box>
+        <!-- TODO: Get this stuff from the CMS -->
+        <h2>Free stuff. <span class="unbold">No catch.</span></h2>
+        <div class="free-stuff-blurb">
+            Access free resources integrated with your book. Sign up for an account
+            to access locked content.
+        </div>
+        <div class="resources">
+            <resource-box each="resource in model.resources" skip="true"></resource-box>
+        </div>
     </div>
 </template>
