--- a/src/app/components/modal-content/modal-content.scss
+++ b/src/app/components/modal-content/modal-content.scss
@@ -8,6 +8,7 @@ modal-content {
     height: 100vh;
     justify-content: center;
     left: 0;
+    margin-top: 4rem;
     padding: 2rem;
     position: fixed;
     top: 0;
