--- a/src/app/pages/details-new/details-tab/details-tab.scss
+++ b/src/app/pages/details-new/details-tab/details-tab.scss
@@ -45,6 +45,7 @@
     }
 
     .publication-info {
+        line-height: normal;
         max-width: 30rem;
     }
 
@@ -84,6 +85,19 @@
     h3,
     h4 {
         letter-spacing: normal;
+    }
+
+    h3 {
+        margin-bottom: 0.3rem;
+    }
+
+    h4 {
+        @include title-font(1.6rem);
+
         margin-bottom: 0;
+
+        ~ img {
+            margin-top: 0.7rem;
+        }
     }
 }
