--- a/src/app/pages/details-new/resource-box/resource-box.html
+++ b/src/app/pages/details-new/resource-box/resource-box.html
@@ -1,16 +1,22 @@
 <template args="model">
     <div class="top">
-        <h3>{model.resource_heading}</h3>
-        <div data-html="resource_description"></div>
+        <h3>{model.heading}</h3>
+        <div data-html="description"></div>
     </div>
     <div class="bottom">
         <div class="left">
-            <!-- TODO Explore now, Click here to unlock, Available for download -->
-            Bottom left
+            <if condition="model.link">
+                <a href="{model.link.url}">{model.link.text}</a>
+            <else>
+                Access pending
+            </if>
         </div>
         <div class="right">
-            <!-- TODO select the correct icon and color -->
-            <i class="fa fa-download"></i><i class="fa fa-lock"></i>
+            <if condition="model.link">
+                <a href="{model.link.url}"><i class="fa fa-{model.iconType}"></i></a>
+            <else>
+                <i class="fa fa-lock"></i>
+            </if>
         </div>
     </div>
 </template>
