--- a/src/app/components/get-this-title/toc-dialog/toc-dialog.scss
+++ b/src/app/components/get-this-title/toc-dialog/toc-dialog.scss
@@ -1,35 +1,18 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 toc-dialog {
-    background-color: ui-color(white);
     display: grid;
-    grid-template-rows: auto 1fr;
-    max-width: 80rem;
-    width: calc(100% - 16rem);
+    grid-gap: 3rem;
+    grid-template-rows: auto auto;
+    height: calc(100vh - 25.5rem);
+    padding: 3rem;
 
-    .title-bar {
-        @include set-font(h4);
-
-        align-items: baseline;
-        background-color: ui-color(default);
-        display: flex;
-        height: 7.5rem;
-        justify-content: space-between;
-        padding: 3rem;
+    .toc-region {
+        border: thin solid ui-color(form-border);
+        overflow-y: auto;
     }
 
-    .main {
-        display: grid;
-        grid-template-rows: auto auto;
-        height: calc(100vh - 25.5rem);
-        padding: 3rem;
-
-        .toc-region {
-            overflow-y: auto;
-        }
-
-        .btn {
-            width: 17rem;
-        }
+    .btn {
+        max-width: 17rem;
     }
 }
