Fix let us know and handle default book for interest form

--- a/src/app/components/form-checkboxgroup/form-checkboxgroup.html
+++ b/src/app/components/form-checkboxgroup/form-checkboxgroup.html
@@ -7,7 +7,8 @@
             <if condition="item.value">
                 <input type="checkbox"
                     name="{model.name}"
-                    value="{item.value}">
+                    value="{item.value}"
+                    checked="{item.selected ? '' : null}">
             <else>
                 <input type="checkbox">
             </if>
