--- a/src/app/pages/details-new/let-us-know/let-us-know.html
+++ b/src/app/pages/details-new/let-us-know/let-us-know.html
@@ -1,3 +1,5 @@
-<div class="book-icon"><a href="/interest"><span class="fa fa-user-plus"></span></a></div>
-<div class="text">Sign up to<br>learn more</div>
-<div class="link"><a href="/interest">Using this book? Let us know.</a></div>
+<template args="model">
+    <div class="book-icon"><a href="/interest"><span class="fa fa-user-plus"></span></a></div>
+    <div class="text">Sign up to<br>learn more</div>
+    <div class="link"><a href="/interest?{encodeURIComponent(model.title)}">Using this book? Let us know.</a></div>
+</div>
