--- a/src/app/pages/faq/faq.scss
+++ b/src/app/pages/faq/faq.scss
@@ -10,6 +10,10 @@
         h1 {
             color: os-color(orange);
         }
+
+        a {
+            color: inherit;
+        }
     }
 
     .desktop-row {
