--- a/src/app/pages/details-new/phone-view/instructor-resources-pane/instructor-resources-pane.html
+++ b/src/app/pages/details-new/phone-view/instructor-resources-pane/instructor-resources-pane.html
@@ -1,12 +1,12 @@
 <template args="model">
-    <h4>Free ({model.freeResources && model.freeResources.length})</h4>
+    <h4>Free ({model.resources.freeResources && model.resources.freeResources.length})</h4>
     <div class="swipe-zone">
         <div class="free-resources-region" skip="true"></div>
     </div>
-    <h4>Paid ({model.paidResources && model.paidResources.length})</h4>
+    <h4>Paid ({model.resources.paidResources && model.resources.paidResources.length})</h4>
     <div class="swipe-zone">
         <div class="paid-resources-region">
-            <div class="logo-box" each="res in model.paidResources">
+            <div class="logo-box" each="res in model.resources.paidResources">
                 <a href="{res.book_link_url}">
                     <img src="{res.ally_color_logo}" alt="{res.ally_heading}">
                 </a>
